tests/snapshots/gql_snapshots__parse_match_remove_with_return_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Mutation:
  match_clause:
    patterns:
      - elements:
          - Node:
              variable: p
              labels:
                - Person
              properties: []
              where_clause: ~
  optional_match_clauses: []
  where_clause: ~
  mutations:
    - Remove:
        properties:
          - variable: p
            property: tempField
  foreach_clauses: []
  return_clause:
    distinct: false
    items:
      - expression:
          Variable: p
        alias: ~
