tests/snapshots/gql_snapshots__parse_match_set_delete_combined_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Mutation:
  match_clause:
    patterns:
      - elements:
          - Node:
              variable: p
              labels:
                - Person
              properties: []
              where_clause: ~
          - Edge:
              variable: r
              labels:
                - TEMP_LINK
              direction: Outgoing
              quantifier: ~
              properties: []
              where_clause: ~
          - Node:
              variable: ~
              labels: []
              properties: []
              where_clause: ~
  optional_match_clauses: []
  where_clause: ~
  mutations:
    - Set:
        items:
          - target:
              variable: p
              property: cleaned
            value:
              Literal:
                Bool: true
    - Delete:
        variables:
          - r
  return_clause: ~
