tests/snapshots/gql_snapshots__parse_match_set_expression_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Mutation:
  match_clause:
    patterns:
      - elements:
          - Node:
              variable: p
              labels:
                - Person
              properties: []
  optional_match_clauses: []
  where_clause: ~
  mutations:
    - Set:
        items:
          - target:
              variable: p
              property: score
            value:
              BinaryOp:
                left:
                  Property:
                    variable: p
                    property: score
                op: Add
                right:
                  Literal:
                    Int: 10
  return_clause: ~
