tests/snapshots/gql_snapshots__parse_match_set_multiple_properties_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Mutation:
  match_clause:
    patterns:
      - elements:
          - Node:
              variable: p
              labels:
                - Person
              properties: []
              where_clause: ~
  optional_match_clauses: []
  where_clause: ~
  mutations:
    - Set:
        items:
          - target:
              variable: p
              property: age
            value:
              Literal:
                Int: 25
          - target:
              variable: p
              property: city
            value:
              Literal:
                String: NYC
  foreach_clauses: []
  return_clause: ~
