tests/snapshots/gql_snapshots__parse_match_set_with_return_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Mutation:
  match_clause:
    patterns:
      - elements:
          - Node:
              variable: p
              labels:
                - Person
              properties:
                - - name
                  - String: Alice
  optional_match_clauses: []
  where_clause: ~
  mutations:
    - Set:
        items:
          - target:
              variable: p
              property: age
            value:
              Literal:
                Int: 31
  return_clause:
    distinct: false
    items:
      - expression:
          Variable: p
        alias: ~
